Fix overlapping

--- a/assets/stylesheets/buttons.css
+++ b/assets/stylesheets/buttons.css
@@ -4,7 +4,7 @@
   border-radius: 2px;
   margin-top: 10px;
   /*width: 135px;*/
-  height: 25px;
+  /* height: 25px; */
   padding: 0;
   width: 100%;
   background-color: #fff;
